--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^6.9.0",
+    "react-spring": "^9.7.1",
     "sass": "^1.59.3"
   },
   "devDependencies": {
